# ffn-dl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  tests.yml
ffn_dl/: __init__.py  __main__.py  accent_map.py  ao3.py  atomic.py  attribution.py  cache_doctor.py  cf_solve.py  character_profile.py  cli.py  content_hash.py  doctor.py  download_queue.py  exporters.py  ficwad.py  gui.py  gui_dialogs.py  gui_search.py  gui_watchlist.py  literotica.py  logging_utils.py  mailer.py  mediaminer.py  models.py  neural_env.py  notifications.py  ollama_install.py  optional_features.py  portable.py  preferences.py  prefs.py  royalroad.py  scraper.py  search.py  self_update.py  sites.py  tts.py  updater.py  watchlist.py  watchlist_doctor.py  (+3 more)
ffn_dl/erotica/: __init__.py  aff.py  (+8 more)
ficary/: __init__.py  cache_doctor.py  cli.py  doctor.py  gui.py  gui_watchlist.py  heal_manifest.py  updater.py  watchlist.py
tests/: conftest.py  library_fixtures.py  test_ao3.py  test_atomic.py  test_audio.py  test_base_scraper.py  test_bugfix_sweep.py  test_cache_doctor.py  test_cf_solve.py  test_chapter_spec.py  test_content_hash.py  test_cover_cache.py  test_erotica_author_pages.py  test_erotica_downloads.py  test_erotica_scrapers.py  test_exporter_output.py  test_exporters.py  test_ffn.py  test_ficwad.py  test_full_doctor.py  test_gui_smoke.py  test_heal_manifest.py  test_html_metadata_formats.py  test_library_abandoned.py  test_library_backup.py  test_library_doctor.py  test_library_edits.py  test_library_find.py  test_library_folder_fandom.py  test_library_fulltext.py  test_library_gui_logic.py  test_library_hardening.py  test_library_incremental_probe_stamping.py  test_library_index_scanner.py  test_library_metadata.py  test_library_mirrors.py  test_library_refresh_autosort.py  test_library_reorganizer.py  test_library_review.py  test_library_stats.py  (+26 more)
(+57 files in other folders)
