[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffn-dl"
version = "1.1.0"
description = "Cross-platform fanfiction.net downloader"
requires-python = ">=3.9"
dependencies = [
    "curl_cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
audio = ["edge-tts>=7.0"]
gui = ["wxPython>=4.2"]
clipboard = ["pyperclip>=1.8"]
all = ["ebooklib>=0.18", "edge-tts>=7.0", "wxPython>=4.2", "pyperclip>=1.8"]

[project.scripts]
ffn-dl = "ffn_dl.cli:main"
