[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffn-dl"
version = "1.23.3"
description = "Cross-platform fanfiction + erotica downloader (FFN, AO3, FicWad, Royal Road, MediaMiner, Wattpad, Literotica, AFF, StoriesOnline, Nifty, SexStories, MCStories, Lushstories, Fictionmania, TGStorytime, Chyoa, Dark Wanderer, GreatFeet)"
requires-python = ">=3.9"
dependencies = [
    "curl_cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
audio = ["edge-tts>=7.0"]
gui = ["wxPython>=4.2"]
clipboard = ["pyperclip>=1.8"]
dev = ["pytest>=7.0"]
all = ["ebooklib>=0.18", "edge-tts>=7.0", "wxPython>=4.2", "pyperclip>=1.8"]

[project.scripts]
ffn-dl = "ffn_dl.cli:main"
